src/objects/Flat__c.object
<CustomObject>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <referenceTo>Apartment__c</referenceTo>
        <relationshipLabel>Flats</relationshipLabel>
        <relationshipName>Flats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currently_available_number_of_units__c</fullName>
        <label>Currently available number of units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_units__c</fullName>
        <label>Number of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_units_sold__c</fullName>
        <label>Number of units sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_of_flat__c</fullName>
        <formula>Square_feet__c *  Rate_per_Sq_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price of flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_per_Sq_ft__c</fullName>
        <label>Rate per Sq.ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Square_feet__c</fullName>
        <label>Square feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Minimum_rate_of_flat</fullName>
        <active>true</active>
        <description>the minimum rate of the flat is 7500000</description>
        <errorConditionFormula>Price_of_flat__c &lt;7500000</errorConditionFormula>
        <errorMessage>The price of the flat must need to be greater or equal to 7500000</errorMessage>
    </validationRules>
</CustomObject>